--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -1,25 +1,27 @@
-<aside class="col-md-4 blog-sidebar">
-    <div class="p-3 mb-3 bg-light rounded">
-        <h4 class="font-italic">About</h4>
-        <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus
-            sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+<div class="card my-4">
+    <h5 class="card-header">Search</h5>
+    <div class="card-body">
+        <form action="/search" method="get">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search for...">
+                <span class="input-group-btn">
+                      <button class="btn btn-secondary" type="button">Go!</button>
+                </span>
+            </div>
+        </form>
     </div>
-
-    <div class="p-3">
-        <h4 class="font-italic">Archives</h4>
-        <ol class="list-unstyled mb-0">
-            {% for archive in archives %}
-            <li><a href="#">{{ archive.month | date('F Y') }}</a></li>
-            {% endfor %}
-        </ol>
+</div>
+<div class="card my-4">
+    <h5 class="card-header">Archives</h5>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-unstyled mb-0">
+                    {% for archive in archives %}
+                    <li><a href="#">{{ archive.month | date('F Y') }}</a></li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
     </div>
-
-    <div class="p-3">
-        <h4 class="font-italic">Elsewhere</h4>
-        <ol class="list-unstyled">
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
-        </ol>
-    </div>
-</aside>
+</div>
