--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,3 @@
-<p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.
-</p>
-<p>
-    <a href="#">Back to top</a>
-</p>
+<div class="container">
+    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+</div>
