--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,78 +1,32 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
-    <div class="col-md-6 px-0">
-        <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
-        <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and
-            efficiently about what's most interesting in this post's contents.</p>
-        <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
-    </div>
-</div>
-<div class="row mb-2">
-    <div class="col-md-6">
-        <div class="card flex-md-row mb-4 box-shadow h-md-250">
-            <div class="card-body d-flex flex-column align-items-start">
-                <strong class="d-inline-block mb-2 text-primary">World</strong>
-                <h3 class="mb-0">
-                    <a class="text-dark" href="#">Featured post</a>
-                </h3>
-                <div class="mb-1 text-muted">Nov 12</div>
-                <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                    additional content.</p>
-                <a href="#">Continue reading</a>
-            </div>
-            <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb"
-                 alt="Card image cap">
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="card flex-md-row mb-4 box-shadow h-md-250">
-            <div class="card-body d-flex flex-column align-items-start">
-                <strong class="d-inline-block mb-2 text-success">Design</strong>
-                <h3 class="mb-0">
-                    <a class="text-dark" href="#">Post title</a>
-                </h3>
-                <div class="mb-1 text-muted">Nov 11</div>
-                <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                    additional content.</p>
-                <a href="#">Continue reading</a>
-            </div>
-            <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb"
-                 alt="Card image cap">
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-8 blog-main">
-        <h3 class="pb-3 mb-4 font-italic border-bottom">
-            From the Firehose
-        </h3>
-        {% for content in contents %}
-            <div class="blog-post">
-                <h2 class="blog-post-title">{{ content.title }}</h2>
-                <p class="blog-post-meta">{{ content.publishedAt | date() }}</p>
-                <p>
-                    {{ content.content }}
-                </p>
-            </div>
-        {% endfor %}
+<h1 class="my-4">
+    <span>Page Heading</span>
+    <small>Secondary Text</small>
+</h1>
 
-        <nav class="blog-pagination">
-            {% set pagination = contents.paginationData %}
-            {% if pagination.current != pagination.last %}
-            <a class="btn btn-outline-primary" href="{{ path('index_page', {'page': pagination.next}) }}">Older</a>
-            {% else %}
-            <a class="btn btn-outline-secondary disabled" href="#">Older</a>
-            {% endif %}
-            {% if pagination.current != pagination.first %}
-            <a class="btn btn-outline-primary" href="{{ path('index_page', {'page': pagination.previous}) }}">Newer</a>
-            {% else %}
-            <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
-            {% endif %}
-        </nav>
+{% for content in contents %}
+<div class="card mb-4">
+    <div class="card-body">
+        <h2 class="card-title">{{ content.title }}</h2>
+        <p class="card-text">{{ content.content }}</p>
+        <a href="#" class="btn btn-primary">Read More &rarr;</a>
     </div>
-
-    {{ include('sidebar.html.twig') }}
+    <div class="card-footer text-muted">
+        Published at {{ content.publishedAt | date() }}
+    </div>
 </div>
+{% endfor %}
+
+<!-- Pagination -->
+<ul class="pagination justify-content-center mb-4">
+    {% set pagination = contents.paginationData %}
+    <li class="page-item{% if pagination.current == pagination.last %} disabled{% endif %}">
+        <a class="page-link" href="{% if pagination.current == pagination.last %}#{% else %}{{ path('index_page', {'page': pagination.next}) }}{% endif %}">&larr; Older</a>
+    </li>
+    <li class="page-item{% if pagination.current == pagination.first %} disabled{% endif %}">
+        <a class="page-link" href="{% if pagination.current == pagination.first %}#{% else %}{{ path('index_page', {'page': pagination.previous}) }}{% endif %}">Newer &rarr;</a>
+    </li>
+</ul>
 {% endblock %}
