--- a/templates/posts.html.twig
+++ b/templates/posts.html.twig
@@ -15,11 +15,13 @@
     </div>
     <div class="card-footer text-muted">
         <span>&nbsp;<i class="fa fa-clock-o"></i>&nbsp;Posted on {{ post.publishedAt | date() }}</span>
+        <span>&nbsp;<i class="fa fa-tag"></i>&nbsp;Tagged with:</span>
+        {% for tag in post.tags %}
+            <a href="{% if tag.slug is null%}{{ path('posts_tag', {'tag': tag.id}) }}{% else %}{{ path('posts_tag', {'tag': tag.slug}) }}{% endif %}">{{ tag.name }}</a>
+        {% endfor %}
     </div>
 </div>
 {% endfor %}
-
-<!-- Pagination -->
 <ul class="pagination justify-content-center mb-4">
     {% set pagination = posts.paginationData %}
     <li class="page-item{% if pagination.current == pagination.last %} disabled{% endif %}">
