--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -45,3 +45,17 @@
         </div>
     </div>
 </div>
+<div class="card my-4">
+    <h5 class="card-header">Meta</h5>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-lg-12">
+                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                <a href="{{ path('fos_user_security_logout') }}">Logout</a>
+                {% else %}
+                <a href="{{ path('fos_user_security_login') }}">Login</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
