--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -50,11 +50,16 @@
     <div class="card-body">
         <div class="row">
             <div class="col-lg-12">
-                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                <a href="{{ path('fos_user_security_logout') }}">Logout</a>
-                {% else %}
-                <a href="{{ path('fos_user_security_login') }}">Login</a>
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                        <a href="{{ path('fos_user_security_logout') }}">Logout</a>
+                        {% else %}
+                        <a href="{{ path('fos_user_security_login') }}">Login</a>
+                    </li>
                 {% endif %}
+                    <li><a href="{{ path('posts_feed') }}">Entries RSS</a></li>
+                    <li><a href="{{ path('comments_feed') }}">Comments RSS</a></li>
             </div>
         </div>
     </div>
