--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,3 +1,3 @@
 <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+    <p class="m-0 text-center text-white">{% trans %}footer.copyright{% endtrans %}</p>
 </div>
