--- a/templates/posts.html.twig
+++ b/templates/posts.html.twig
@@ -19,8 +19,8 @@
         <a href="{{ postUrl }}" class="btn btn-primary">{% trans %}post.read.more{% endtrans %}</a>
     </div>
     <div class="card-footer text-muted">
-        <span>&nbsp;<i class="fa fa-clock-o"></i>&nbsp{% trans %}post.published.at{% endtrans %} {{ post.publishedAt | date() }}</span>
-        <span>&nbsp;<i class="fa fa-tag"></i>&nbsp;{% trans %}post.tags{% endtrans %}</span>
+        <span><i class="fa fa-clock-o"></i>&nbsp{% trans %}post.published.at{% endtrans %} {{ post.publishedAt | date() }}</span>
+        <span><i class="fa fa-tag"></i>&nbsp;{% trans %}post.tags{% endtrans %}</span>
         {% for tag in post.tags %}
             <a href="{% if tag.slug is null%}{{ path('posts_tag', {'tag': tag.id}) }}{% else %}{{ path('posts_tag', {'tag': tag.slug}) }}{% endif %}">{{ tag.name }}</a>
         {% endfor %}
