--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -1,28 +1,56 @@
 {% trans_default_domain 'FOSUserBundle' %}
-
-<form class="form-signin" action="{{ path("fos_user_security_check") }}" method="post">
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    {% if error %}
-        <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-    {% if csrf_token %}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-    {% endif %}
-    <label for="username" class="sr-only">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}"
-           placeholder="{{ 'security.login.username'|trans }}" required="required" autocomplete="username" autofocus/>
-
-    <label for="password" class="sr-only">{{ 'security.login.password'|trans }}</label>
-    <input type="password" id="password" name="_password" class="form-control"
-           placeholder="{{ 'security.login.password'|trans }}" required="required" autocomplete="current-password" />
-
-    <div class="checkbox mb-3">
-        <label>
-            <input type="checkbox" id="remember_me" name="_remember_me" />
-            <span>{{ 'security.login.remember_me'|trans }}</span>
-        </label>
+<div class="col-md-8">
+    <div class="card-group">
+        <div class="card p-4">
+            <div class="card-body">
+                <h1>{{ 'security.singin.login' | trans }}</h1>
+                <p class="text-muted">{{ 'security.singin.signin' | trans }}</p>
+                <form class="form-signin" action="{{ path("fos_user_security_check") }}" method="post">
+                    {% if error %}
+                        <div class="alert alert-danger" role="alert">{{ error.messageKey | trans(error.messageData, 'security') }}</div>
+                    {% endif %}
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend"><span class="input-group-text"><i class="icon-user"></i></span></div>
+                        <input type="text" class="form-control" name="_username" placeholder="{{ 'security.login.username' | trans }}"
+                               required="required" autocomplete="username" autofocus>
+                    </div>
+                    <div class="input-group mb-4">
+                        <div class="input-group-prepend"><span class="input-group-text"><i class="icon-lock"></i></span></div>
+                        <input type="password" class="form-control" name="_password" placeholder="{{ 'security.login.password' | trans }}"
+                               required="required" autocomplete="current-password">
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="checkbox mb-3">
+                                <label>
+                                    <input type="checkbox" id="remember_me" name="_remember_me" />
+                                    <span>{{ 'security.login.remember_me' | trans }}</span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <button type="submit" class="btn btn-primary px-4">{{ 'security.login.submit' | trans }}</button>
+                        </div>
+                        <div class="col-6 text-right">
+                            <a class="btn btn-link px-0" href="{{ path('fos_user_resetting_request') }}">{{ 'security.forgotpassword.label' | trans }}</a>
+                        </div>
+                    </div>
+                    {% if csrf_token %}
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                    {% endif %}
+                </form>
+            </div>
+        </div>
+        <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+            <div class="card-body text-center">
+                <div>
+                    <h2>{{ 'security.signup.signup' | trans }}</h2>
+                    <p>{{ 'security.signup.description' | trans }}</p>
+                    <button class="btn btn-primary active mt-3" type="button">{{ 'security.signup.register' | trans }}</button>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <input type="submit" id="_submit" name="_submit" class="btn btn-lg btn-primary btn-block"
-           value="{{ 'security.login.submit'|trans }}" />
-</form>
+</div>
