--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -23,8 +23,12 @@
 <body class="app flex-row align-items-center">
 <div class="container">
     <div class="row justify-content-center">
-        {% block fos_user_content %}
-        {% endblock fos_user_content %}
+        <div class="col-md-8">
+            <div class="card-group">
+                {% block fos_user_content %}
+                {% endblock fos_user_content %}
+            </div>
+        </div>
     </div>
 </div>
 </body>
