--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -8,18 +8,22 @@
             <div class="input-group mb-3">
                 <div class="input-group-prepend"><span class="input-group-text"><i class="icon-user"></i></span></div>
                 {{ form_widget(form.username, {'attr': {'placeholder': 'registration.username'}}) }}
+                {{ form_errors(form.username) }}
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend"><span class="input-group-text">@</span></div>
                 {{ form_widget(form.email, {'attr': {'placeholder': 'registration.email'}}) }}
+                {{ form_errors(form.email) }}
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend"><span class="input-group-text"><i class="icon-lock"></i></span></div>
                 {{ form_widget(form.plainPassword.first, {'attr': {'placeholder': 'registration.password'}}) }}
+                {{ form_errors(form.plainPassword.first) }}
             </div>
             <div class="input-group mb-3">
                 <div class="input-group-prepend"><span class="input-group-text"><i class="icon-lock"></i></span></div>
                 {{ form_widget(form.plainPassword.second, {'attr': {'placeholder': 'registration.password.repeat'}}) }}
+                {{ form_errors(form.plainPassword.second) }}
             </div>
             <button class="btn btn-block btn-primary" type="submit">{{ 'registration.submit' | trans }}</button>
         {{ form_end(form) }}
