--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% block title %}Blog Template for Bootstrap!{% endblock %}</title>
+    <title>Administration</title>
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}">
     <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('apple-touch-icon.png') }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('favicon-32x32.png') }}">
