--- a/templates/admin/sidebar.html.twig
+++ b/templates/admin/sidebar.html.twig
@@ -5,14 +5,30 @@
                 <i class="nav-icon icon-speedometer"></i> Dashboard
             </a>
         </li>
-        <li class="nav-title">Theme</li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
-                <i class="nav-icon icon-drop"></i> Colors</a>
+            <a class="nav-link" href="{{ path('admin_posts') }}">
+                <i class="nav-icon icon-pin"></i>{% trans %}admin.posts.title{% endtrans %}
+            </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
-                <i class="nav-icon icon-pencil"></i> Typography</a>
+            <a class="nav-link" href="{{ path('admin_pages') }}">
+                <i class="nav-icon icon-doc"></i>{% trans %}admin.pages.title{% endtrans %}
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('admin_comments') }}">
+                <i class="nav-icon icon-bubbles"></i>{% trans %}admin.comments.title{% endtrans %}
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('admin_users') }}">
+                <i class="nav-icon icon-user"></i>{% trans %}admin.users.title{% endtrans %}
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('admin_settings') }}">
+                <i class="nav-icon icon-settings"></i>{% trans %}admin.settings.title{% endtrans %}
+            </a>
         </li>
     </ul>
 </nav>
