--- a/templates/admin/sidebar.html.twig
+++ b/templates/admin/sidebar.html.twig
@@ -2,7 +2,7 @@
     <ul class="nav">
         <li class="nav-item">
             <a class="nav-link active" href="{{ path('admin_index') }}">
-                <i class="nav-icon icon-speedometer"></i> Dashboard
+                <i class="nav-icon icon-speedometer"></i>{% trans %}admin.dashboard{% endtrans %}
             </a>
         </li>
         <li class="nav-item">
