--- a/templates/posts.html.twig
+++ b/templates/posts.html.twig
@@ -27,8 +27,9 @@
     </div>
 </div>
 {% endfor %}
+{% set pagination = posts.paginationData %}
+{% if pagination.pageCount > 0 %}
 <ul class="pagination justify-content-center mb-4">
-    {% set pagination = posts.paginationData %}
     <li class="page-item{% if pagination.current == pagination.last %} disabled{% endif %}">
         <a class="page-link" href="{% if pagination.current == pagination.last %}#{% else %}{{ path('posts_page', {'page': pagination.next}) }}{% endif %}">
             {% trans %}post.list.older{% endtrans %}
@@ -40,4 +41,5 @@
         </a>
     </li>
 </ul>
+{% endif %}
 {% endblock %}
